Changed video to autoplay loop

--- a/VideoBackground.html
+++ b/VideoBackground.html
@@ -7,8 +7,9 @@
 	<body> 
 
 		<h1>Hello World!</h1> 
-		<video controls="controls" class="show keepwidth"><source type="video/mp4" src="ink-short.mp4">
-		</video>
+    <video autoplay loop poster="polina.jpg" id="bgvid">
+      <source type="video/mp4" src="ink-short.mp4">
+    </video>
 
 	</body>  
 </html> 
