--- a/VideoBackground.html
+++ b/VideoBackground.html
@@ -7,7 +7,7 @@
 	<body> 
 
 		<h1>Hello World!</h1> 
-    <video autoplay loop poster="polina.jpg" id="bgvid">
+    <video autoplay poster="background.jpg" id="bgvid">
       <source type="video/mp4" src="ink-short.mp4">
     </video>
 
